[project]
name = "youtube-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brotli>=1.2.0",
    "certifi>=2025.11.12",
    "mutagen>=1.47.0",
    "pycryptodomex>=3.23.0",
    "streamlit",
    "websockets>=15.0.1",
    "yt-dlp>=2025.12.8",
]
